<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".founder.FounderActivity">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:background="@drawable/image_border"
            android:src="@drawable/founder"
            android:layout_width="150dp"
            android:layout_height="150dp" />
        <TextView
            android:textAlignment="center"
            android:text="@string/founder"
            android:textColor="@color/dark_grey_color"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textAlignment="center"
            android:text="@string/founder_name"
            android:textColor="@color/dark_grey_color"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:background="@drawable/image_border"
            android:src="@drawable/chairman"
            android:layout_width="150dp"
            android:layout_height="150dp" />
        <TextView
            android:textAlignment="center"
            android:text="@string/chairman"
            android:textColor="@color/dark_grey_color"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textAlignment="center"
            android:text="@string/chairman_name"
            android:textColor="@color/dark_grey_color"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginTop="25dp"
            android:layout_marginBottom="35dp"
            android:background="@color/light_grey_color"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:layout_gravity="left"
            android:text="@string/details_name"
            android:textColor="@color/dark_grey_color"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textAlignment="inherit"
            android:text="@string/details"
            android:textColor="@color/dark_grey_color"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>