<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_alert_dialog_id"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="45dp"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:text="@string/app_title_name"
        android:textColor="@color/dark_grey_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:text="@string/apps_version"
        android:textColor="@color/dark_grey_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/developed_by_id"
        android:clickable="true"
        android:textIsSelectable="true"
        android:cursorVisible="true"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:text="@string/developed_by"
        android:textColor="@color/design_color1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>