<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".communication.CommunicationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <!-- Google maps -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="vertical"
            android:padding="15dp">
            <!--<fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>-->
            <fragment
                android:id="@+id/map"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                map:cameraBearing="0"
                map:cameraTargetLat="22.350142"
                map:cameraTargetLng="91.822306"
                map:cameraTilt="30"
                map:cameraZoom="18"
                map:mapType="normal"
                map:uiCompass="true"
                map:uiRotateGestures="true"
                map:uiScrollGestures="true"
                map:uiTiltGestures="true"
                map:uiZoomControls="false"
                map:uiZoomGestures="true"
                tools:ignore="MissingPrefix"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50">
        <!-- Opinion/Comments -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_grey_color"
                android:orientation="vertical"
                android:padding="15dp">

                <EditText
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/com_full_name" />

                <EditText
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/com_contact_number" />

                <EditText
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/com_email" />

                <EditText
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/com_subject" />

                <EditText
                    android:hint="@string/com_comments"
                    android:gravity="top"
                    android:textColor="@color/deep_grey_color"
                    android:layout_marginBottom="10dp"
                    android:inputType="textCapSentences|textAutoCorrect|text|textMultiLine"
                    android:background="@drawable/edit_text_border"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/com_follow_up" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Yes" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No" />
                </RadioGroup>

                <Button
                    android:textColor="@color/white_color"
                    android:layout_margin="15dp"
                    android:background="@color/dark_grey_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/com_submit" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>