<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".donation.DonationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:text="@string/donation_quotation"
                android:textAlignment="center"
                android:textColor="@color/dark_grey_color"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:background="@color/light_grey_color"
            android:orientation="vertical"
            android:padding="15dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="80"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donation_bank"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <TextView
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donation_bank_info"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:elevation="2dp"></SearchView>

    </LinearLayout>
</LinearLayout>